# Master

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  topics_full.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  master_cli.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  chunk.py  document.py  progress.py  topic.py
backend/app/routers/: gaps.py  graph.py  ingest.py  progress.py  query.py
backend/app/seed_data/: toc.py
backend/app/services/: chunking.py  embedding.py  gap_detector.py  graph_service.py  hybrid_retrieval.py  llm_gateway.py  rag_pipeline.py  reranker.py
backend/tests/: conftest.py  test_gap_detector.py  test_hybrid_retrieval.py  test_progress.py
frontend/: index.html  package-lock.json  package.json  sw.js  tailwind.config.js  vite.config.js  vite.config.ts
frontend/css/: style.css
frontend/js/: api.js  app.js  chat.js  gaps.js  graph.js
frontend/public/: manifest.json
frontend/src/: App.jsx  App.tsx  api.ts  index.css  mockData.ts  store.test.ts  store.ts  types.ts
frontend/src/components/: Chat.jsx  ChatView.tsx  Gaps.jsx  Graph.jsx  GraphView.tsx  LoadingScreen.jsx  NodePanel.tsx  ProgressView.tsx  SchedulerView.tsx  Toast.jsx  UploadView.tsx
frontend/src/components/__tests__/: GraphView.test.tsx  ProgressView.test.tsx
frontend/src/services/: api.js
frontend/src/test/: mockData.ts
