[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-prep"
version = "1.0.0"
description = "CSE Placement Prep Tool — syllabus tracker, knowledge graph, and PDF RAG"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CSE Master", email = "master@example.com" },
]
keywords = ["placement", "cse", "study", "syllabus", "rag"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
]

[project.scripts]
master = "master_cli:main"

[tool.setuptools.packages.find]
include = ["app*", "master_cli*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
